fix spacing for about quote

--- a/css/style.css
+++ b/css/style.css
@@ -138,8 +138,9 @@ nav span {
 }
 
 #about-quote {
+	text-align: center;
+	max-width: 60%;
 	font-size: 2.5em;
-	max-width: 80%;
 }
 
 #about-author {
